auth/authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: "jwt-auth"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
  - issuer: "localhost"
    jwksUri: "http://token-eas-service.default.svc.cluster.local/.well-known/jwks.json"
    forwardOriginalToken: false
    outputPayloadToHeader: x-jwt-claims
